# cpp-bootstrap

./: .config  README.md  cpp-bootstrap  install.sh  setup.sh  testcases.sh  tests.sh
templates/: CMakeLists.txt  Makefile
templates/src/: Hello.cpp
templates/tests/: HelloTest.cpp
